# credits/src/main/java/com/jorge/credits/mapper/TransactionRequestMapper.java
@@ -1,6 +1,7 @@
 package com.jorge.credits.mapper;
 
 import com.jorge.credits.model.ConsumptionRequest;
+import com.jorge.credits.model.CreditPaymentByDebitCardRequest;
 import com.jorge.credits.model.CreditPaymentRequest;
 import com.jorge.credits.webclient.model.CreditCardTransactionRequest;
 import com.jorge.credits.webclient.model.TransactionRequest;
@@ -19,18 +20,46 @@ public class TransactionRequestMapper {
         transactionRequest.setAccountNumber(creditPaymentRequest.getAccountNumber());
         transactionRequest.setRelatedCreditId(savedCreditId);
         transactionRequest.setAmount(creditPaymentRequest.getAmount());
-        transactionRequest.setTransactionType(TransactionRequest.TransactionType.valueOf(creditPaymentRequest.getCreditTypeEnum().name()));
+        transactionRequest.setTransactionType(TransactionRequest.TransactionType.valueOf(creditPaymentRequest.getCreditType().name()));
         transactionRequest.setDescription(description);
         transactionRequest.setFee(fee);
         return transactionRequest;
     }
 
-    public CreditCardTransactionRequest mapPaymentRequestToCreditCardTransactionRequest(CreditPaymentRequest creditPaymentRequest, String creditCardNumber) {
+    public TransactionRequest mapDebitCardPaymentRequestToTransactionRequest(String accountNumber,
+                                                                            CreditPaymentByDebitCardRequest creditPaymentByDebitCardRequest,
+                                                                    String savedCreditId,
+                                                                    String description,
+                                                                    BigDecimal fee) {
+        TransactionRequest transactionRequest = new TransactionRequest();
+        transactionRequest.setAccountNumber(accountNumber);
+        transactionRequest.setRelatedCreditId(savedCreditId);
+        transactionRequest.setAmount(creditPaymentByDebitCardRequest.getAmount());
+        transactionRequest.setTransactionType(TransactionRequest.TransactionType.valueOf(creditPaymentByDebitCardRequest.getCreditType().name()));
+        transactionRequest.setDescription(description);
+        transactionRequest.setFee(fee);
+        return transactionRequest;
+    }
+
+    public CreditCardTransactionRequest mapPaymentRequestToCreditCardTransactionRequest(CreditPaymentRequest creditPaymentRequest,
+                                                                                        String creditCardNumber) {
         CreditCardTransactionRequest creditCardTransactionRequest = new CreditCardTransactionRequest();
         creditCardTransactionRequest.setCreditCardNumber(creditCardNumber);
         creditCardTransactionRequest.setTransactionType(CreditCardTransactionRequest.CreditCardTransactionType.valueOf(
-                creditPaymentRequest.getCreditTypeEnum().name()));
+                creditPaymentRequest.getCreditType().name()));
         creditCardTransactionRequest.setAmount(creditPaymentRequest.getAmount());
+        creditCardTransactionRequest.setCreatedAt(LocalDateTime.now());
+        return creditCardTransactionRequest;
+    }
+
+    public CreditCardTransactionRequest mapPaymentDebitCardRequestToCreditCardTransactionRequest(CreditPaymentByDebitCardRequest
+                                                                                                             creditPaymentRequestWithDebitCard,
+                                                                                                 String creditCardNumber) {
+        CreditCardTransactionRequest creditCardTransactionRequest = new CreditCardTransactionRequest();
+        creditCardTransactionRequest.setCreditCardNumber(creditCardNumber);
+        creditCardTransactionRequest.setTransactionType(CreditCardTransactionRequest.CreditCardTransactionType.valueOf(
+                creditPaymentRequestWithDebitCard.getCreditType().name()));
+        creditCardTransactionRequest.setAmount(creditPaymentRequestWithDebitCard.getAmount());
         creditCardTransactionRequest.setCreatedAt(LocalDateTime.now());
         return creditCardTransactionRequest;
     }
